changed hover color

--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size
 
 .pricing>section input[type="button"]:hover{ background-color:#549e3a; color:#FFF}
 
-.pricing>section:hover{ background-color:#83c76c;-webkit-transform:scale(1.1);
+.pricing>section:hover{ background-color:#c44569;-webkit-transform:scale(1.1);
 
 transform:scale(1.1);}
 
