--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,7 +10,7 @@
 	.team-pan section { margin-bottom:30px}
 	.team-pan figure img{ margin:0 auto; width:100%; max-width:100%; display:block}
 	.contact-form{ padding-left:20px; padding-right:20px}
-	.section-one article p br,.slider-pan section article br,.section-five header[role="title-page"] h4 br, .section-five header[role="title-page"] h2 br{ display:none}
+	.section-one article p br,.section-five header[role="title-page"] h4 br, .section-five header[role="title-page"] h2 br{ display:none}
 }
 /* xs */
 @media (max-width: 767px) {
@@ -29,8 +29,6 @@
 	.section-two section article{ padding-left:0; padding-right:0; padding-top:0px}
 	.section-two section figure{ background-attachment:scroll; margin-top:20px; margin-bottom:20px}
 	.section-two section:last-child article{ padding-left:0}
-	.slider-pan section article{ margin:0 4%}
-	.slider-pan section article br,.section-five header[role="title-page"] h4 br, .section-five header[role="title-page"] h2 br,.section-one article p br{ display:none}
 	.pricing > section{ margin:0; display:block; max-width:100%; margin-bottom:30px}
 	.section-three header[role="title-page"]{ padding-bottom:20px}
 	.team-pan section { margin-bottom:30px}
